# Solana-Agent

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  agent.md  pyproject.toml  toolchain.lock.json
.github/workflows/: ci.yml  toolchain-integration.yml
.superstack/: build-context.md
contracts/: approval.schema.json  artifact.schema.json  command.schema.json  deployment.schema.json  event.schema.json  mission-check.schema.json  mission-pack.schema.json  mission-step.schema.json  mission.schema.json  policy-decision.schema.json  run.schema.json  runtime-contract.schema.json  session.schema.json
docs/: architecture.md  chaos-testing.md  command-journal.md  declarative-missions.md  external-execution-gateway.md  grant-proposal.md  mission-lifecycle.md  policy-engine.md  pr5-devnet-e2e.md  reproducible-toolchain.md  safety-model.md  setup-wsl-ubuntu.md  skills.md  solana-agent-development-plan.md
docs/evidence/: README.md  public-system-proof-v1.json  sa-exec-001.md  sa-gw-002-live-devnet.json  sa-gw-002-live-devnet.md
docs/reviews/: SA-GW-002-PR8.html
environment/: Dockerfile  compose.yaml  devcontainer.json  verify-toolchain.py
examples/: counter-deployment.json  counter-evidence-pack.md  counter-session.json  runtime-contract.local.json
gateway/: __init__.py  __main__.py  backend.py  chaos.py  chaos_scenario.py  cli.py  journal.py  protocol.py  service.py  solana_execute.py  solana_prepare.py
missions/: create-counter.md  create-counter.yaml  deploy-existing-program.md  deploy-existing-program.yaml  mission-pack.json  verify-devnet-deploy.md  verify-devnet-deploy.yaml
prompts/: identity.md  operating-rules.md  output-contracts.md
scripts/solana/: capture_evidence.sh  check_env.sh  create_ephemeral_keypair.py  deploy_anchor.sh  devnet_airdrop.sh  invoke_anchor.sh  recover_devnet_proof.sh  render_proof_video.sh  restore_devnet_keypair.py  run_live_devnet_proof.sh  wallet_info.sh
scripts/wsl/: fix_foundry_env.sh
skills/anchor-deploy/: SKILL.md
skills/anchor-scaffold/: SKILL.md
skills/anchor-test/: SKILL.md
skills/explorer-evidence/: SKILL.md
skills/solana-bootstrap/: SKILL.md
skills/solana-invoke/: SKILL.md
skills/wallet-safety/: SKILL.md
solana_agent/: __init__.py  cli.py  doctor.py  runtime.py  runtime_factory.py  toolchain.py
solana_agent/adapters/: __init__.py  anchor.py  counter_template.py  doctor.py  evidence.py  filesystem.py  package_manager.py  process.py  registry.py  solana_cli.py  solana_rpc.py  validator.py
solana_agent/authority/: __init__.py  approvals.py  policy.py  redaction.py
solana_agent/contracts/: __init__.py  authority.py  command.py  lifecycle.py  mission.py
solana_agent/execution/: __init__.py  executor.py  idempotency.py  journal.py
solana_agent/missions/: __init__.py  engine.py  graph.py  loader.py  templates.py
solana_agent/storage/: __init__.py  database.py  repositories.py
templates/anchor-counter/files/: README.md.tmpl  package.json.tmpl
templates/anchor-counter/files/programs/__PROGRAM_SLUG__/src/: lib.rs.tmpl
templates/anchor-counter/files/scripts/: interact.ts.tmpl
templates/anchor-counter/files/tests/: __PROGRAM_SLUG__.ts.tmpl
tests/: test_cli.py  test_command_idempotency.py  test_command_journal.py  test_command_lifecycle.py  test_contracts.py  test_counter_toolchain_integration.py  test_doctor.py  test_external_gateway.py  test_filesystem_adapter.py  test_local_validator.py  test_local_validator_integration.py  test_mission_engine.py  test_mission_lifecycle.py  test_mission_loader.py  test_policy_engine.py  test_pr5_e2e.py  test_process_adapter.py  test_production_adapters.py  test_runtime_primitives.py  test_solana_execute_backend.py  test_solana_prepare_backend.py  test_toolchain_contract.py
tests/fixtures/anchor-workspace/: Anchor.toml  Cargo.toml  package.json
tests/fixtures/anchor-workspace/programs/fixture-program/: Cargo.toml
tests/fixtures/anchor-workspace/programs/fixture-program/src/: lib.rs
