[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "solana-agent-runtime"
version = "0.1.0"
description = "Safe execution, on-chain evidence, and reproducible evaluation for Solana coding agents."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Solana Agent contributors" },
]
keywords = ["solana", "anchor", "agents", "developer-tools", "runtime"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Build Tools",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "mypy>=1.10,<2",
  "pytest>=8,<9",
  "pytest-cov>=5,<8",
  "ruff>=0.8,<1",
]

[project.scripts]
solana-agent = "solana_agent.cli:main"

[tool.setuptools.packages.find]
include = ["solana_agent*"]

[tool.setuptools.package-data]
solana_agent = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --basetemp=.pytest_tmp"
cache_dir = ".pytest_tmp/cache"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["solana_agent"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
