[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "solana-agent-runtime"
version = "0.1.0"
description = "Safe execution, on-chain evidence, and reproducible evaluation for Solana coding agents."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Solana Agent contributors" },
]
keywords = ["solana", "anchor", "agents", "developer-tools", "runtime"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Build Tools",
]
dependencies = [
  "PyYAML>=6.0.2,<7",
  "rfc8785>=0.1.4,<1",
  "solders>=0.28,<0.29",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10,<2",
  "pytest>=8,<9",
  "pytest-cov>=5,<8",
  "ruff>=0.8,<1",
  "types-PyYAML>=6.0.12",
]

[project.scripts]
solana-agent = "solana_agent.cli:main"
solana-agent-gateway = "gateway.cli:main"

[tool.setuptools.packages.find]
include = ["solana_agent*", "gateway*"]

[tool.setuptools.package-data]
solana_agent = ["py.typed"]

[tool.setuptools.data-files]
"share/solana-agent" = ["toolchain.lock.json"]
"share/solana-agent/missions" = [
  "missions/mission-pack.json",
  "missions/create-counter.yaml",
  "missions/deploy-existing-program.yaml",
  "missions/verify-devnet-deploy.yaml",
]
"share/solana-agent/templates/anchor-counter/files" = [
  "templates/anchor-counter/files/package.json.tmpl",
  "templates/anchor-counter/files/README.md.tmpl",
]
"share/solana-agent/templates/anchor-counter/files/programs/__PROGRAM_SLUG__/src" = [
  "templates/anchor-counter/files/programs/__PROGRAM_SLUG__/src/lib.rs.tmpl",
]
"share/solana-agent/templates/anchor-counter/files/scripts" = [
  "templates/anchor-counter/files/scripts/interact.ts.tmpl",
]
"share/solana-agent/templates/anchor-counter/files/tests" = [
  "templates/anchor-counter/files/tests/__PROGRAM_SLUG__.ts.tmpl",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --basetemp=.pytest_tmp"
cache_dir = ".pytest_tmp/cache"
testpaths = ["tests"]
markers = [
  "integration: tests that require the pinned Solana/Anchor toolchain",
]

[tool.coverage.run]
branch = true
source = ["solana_agent", "gateway"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
